--- a/src/Resources/app/administration/src/assets/scss/global.scss
+++ b/src/Resources/app/administration/src/assets/scss/global.scss
@@ -15,6 +15,18 @@
     border-radius: 5px;
     margin: 5px 0;
 }
+.blur-cms-element-preview-image {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+}
+.blur-cms-element-preview {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .input-group {
 
     .sw-block-field__block {
