--- a/src/Resources/app/administration/src/module/sw-cms/blocks/blur-elysium-slider/preview/sw-cms-preview-blur-elysium-slider-block.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/blocks/blur-elysium-slider/preview/sw-cms-preview-blur-elysium-slider-block.twig
@@ -2,8 +2,8 @@
     <div class="sw-cms-preview-blur-elysium-slider-block">
 
         {% block blur_cms_block_elysium_slider_preview %}
-            <img class="sw-cms-preview-blur-elysium-slider-block__preview-image" 
-                :src="'blurelysiumslider/static/img/component-preview-image.svg' | asset">
+            <img class="sw-cms-preview-blur-elysium-slider-block__preview-image blur-cms-element-preview-image" 
+                :src="'blurelysiumslider/static/img/cms-slider-element-preview.svg' | asset">
         {% endblock %}
     </div>
 {% endblock %}
