--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.scss
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.scss
@@ -10,17 +10,18 @@
 .blur-cms-el-elysium-slider__slider-preview {
     width: 100%;
     flex: 1 1 100%;
-    min-height: 20rem;
-    background-color: #b59baf;
-    color: #ffffff;
-    border-radius: 0;
+    background-color: rgba(249,249,249,1);
+    border: 2px dashed #ddd;
+    border-radius: 10px;
     display: flex;
     align-items: center;
-    padding: 3rem 6rem;
+    padding: 4rem 2rem;
+    margin: 1rem;
     text-align: center;
     line-height: 1.5;
     position: relative;
     overflow: hidden;
+    justify-content: center;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -43,17 +44,21 @@
     width: 100%;
     position: relative;
     z-index: 5;
+    max-width: 50%;
+
+    @media screen and (max-width: 700px) {
+        max-width: 100%;
+    }
+
+    @media screen and (max-width: 1100px) {
+        max-width: 75%;
+    }
 }
 
 .blur-cms-el-elysium-slider__slider-preview__title {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 700;
-    margin-bottom: 1.5rem;
-}
-
-.blur-cms-el-elysium-slider__slider-preview__description {
-    margin-bottom: 1.5rem;
-    font-size: 1.25rem;
+    margin-bottom: 1rem;
 }
 
 .blur-cms-el-elysium-slider__slider-preview__navigation-button {
