--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/preview/blur-cms-el-preview-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/preview/blur-cms-el-preview-elysium-slider.twig
@@ -1,6 +1,6 @@
 {% block blur_cms_element_elysium_slider_preview %}
-    <div class="blur-cms-el-preview-elysium-slider">
-        <img class="blur-cms-el-preview-elysium-slider__preview-image"
-             :src="'blurelysiumslider/static/img/component-preview-image.svg' | asset">
+    <div class="blur-cms-element-preview">
+        <img class="blur-cms-el-preview-elysium-slider__preview-image blur-cms-element-preview-image"
+             :src="'blurelysiumslider/static/img/cms-slider-element-preview.svg' | asset">
     </div>
 {% endblock %}
