--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
@@ -20,44 +20,68 @@
                 {% endblock %}
 
                 {% block blur_elysium_slides_input_headline %}
-                    <sw-container columns="3fr 1fr 1fr" gap="0 16px">
-                        <sw-text-field
-                            v-model="slide.title" 
-                            :label="$tc('blurElysiumSlides.slideSettings.headline.label')"
-                            :placeholder="$tc('blurElysiumSlides.slideSettings.headline.placeholder')"
-                            :helpText="$tc('blurElysiumSlides.slideSettings.headline.helpText')"
-                        />
+                    <blur-card-section>
 
-                        {% block blur_elysium_slides_input_headline_element %}
-                            <sw-select-field 
-                                v-if="slide.slideSettings"
-                                :value="slide.slideSettings.headlineElement"
-                                :label="$tc('BlurElysiumSlides.settings.headline.element.label')"
-                                :placeholder="$tc('BlurElysiumSlides.settings.headline.element.placeholder')"
-                                :helpText="$tc('BlurElysiumSlides.settings.headline.element.helpText')"
-                                @change="value => setSlideSetting({key:'headlineElement', value: value})">
-                                <option value="h1">{{ 'H1' }}</option>
-                                <option value="h2">{{ 'H2' }}</option>
-                                <option value="h3">{{ 'H3' }}</option>
-                                <option value="h4">{{ 'H4' }}</option>
-                                <option value="h5">{{ 'H5' }}</option>
-                                <option value="h6">{{ 'H6' }}</option>
-                            </sw-select-field>
-                        {% endblock %}
+                        <blur-paragraph 
+                            :title="$tc('blurElysiumSlides.slideSettings.headline.title')"
+                            :style="{
+                                marginBottom: '16px'
+                            }" />
 
-                        {% block blur_elysium_slides_input_headline_textcolor %}
-                            <sw-colorpicker
-                                v-if="slide.slideSettings"
-                                colorOutput="auto"
-                                :value="slide.slideSettings.headlineTextcolor"
-                                :label="$tc('BlurElysiumSlides.settings.headline.textcolor.label')"
-                                :alpha="true"
-                                :colorLabels="true"
-                                :zIndex="100"
-                                @input="value => setSlideSetting({ key: 'headlineTextcolor', value: value })">
-                            </sw-colorpicker>
-                        {% endblock %}
-                    </sw-container>
+                        <sw-container columns="1fr 1fr 1fr 1fr" gap="0 16px">
+                            <sw-text-field
+                                v-model="slide.title" 
+                                :label="$tc('blurElysiumSlides.slideSettings.headline.label')"
+                                :placeholder="$tc('blurElysiumSlides.slideSettings.headline.placeholder')"
+                                :helpText="$tc('blurElysiumSlides.slideSettings.headline.helpText')"
+                                :style="{
+                                    gridColumn: '1 / 5'
+                                }" />
+
+                            <sw-number-field 
+                                type="int"
+                                :label="$tc('blurElysiumSlides.slideSettings.display.common.fontSize')"
+                                :step="1"
+                                :min="0"
+                                :value="viewportSettings.headline?.fontSize"
+                                @change="value => setViewportSetting({key:'headline.fontSize', value: value})"
+                            >
+                                <template #hint>
+                                    <blur-elysium-device-hint />
+                                </template>
+                            </sw-number-field> 
+
+                            {% block blur_elysium_slides_input_headline_element %}
+                                <sw-select-field 
+                                    v-if="slide.slideSettings"
+                                    :value="slide.slideSettings.headlineElement"
+                                    :label="$tc('BlurElysiumSlides.settings.headline.element.label')"
+                                    :placeholder="$tc('BlurElysiumSlides.settings.headline.element.placeholder')"
+                                    :helpText="$tc('BlurElysiumSlides.settings.headline.element.helpText')"
+                                    @change="value => setSlideSetting({key:'headlineElement', value: value})">
+                                    <option value="h1">{{ 'H1' }}</option>
+                                    <option value="h2">{{ 'H2' }}</option>
+                                    <option value="h3">{{ 'H3' }}</option>
+                                    <option value="h4">{{ 'H4' }}</option>
+                                    <option value="h5">{{ 'H5' }}</option>
+                                    <option value="h6">{{ 'H6' }}</option>
+                                </sw-select-field>
+                            {% endblock %}
+
+                            {% block blur_elysium_slides_input_headline_textcolor %}
+                                <sw-colorpicker
+                                    v-if="slide.slideSettings"
+                                    colorOutput="auto"
+                                    :value="slide.slideSettings.headlineTextcolor"
+                                    :label="$tc('BlurElysiumSlides.settings.headline.textcolor.label')"
+                                    :alpha="true"
+                                    :colorLabels="true"
+                                    :zIndex="100"
+                                    @input="value => setSlideSetting({ key: 'headlineTextcolor', value: value })">
+                                </sw-colorpicker>
+                            {% endblock %}
+                        </sw-container>
+                    </blur-card-section>
                 {% endblock %}
 
                 {% block blur_elysium_slides_input_description %}
@@ -73,14 +97,69 @@
             <sw-colorpicker
                 v-if="slide.slideSettings"
                 colorOutput="auto"
-                :value="slide.slideSettings.slideBgColor" 
-                :label="$tc('BlurElysiumSlides.settings.slideBgColor.title')"
+                :value="slide.slideSettings.slide?.bgColor" 
+                :label="$tc('blurElysiumSlides.slideSettings.slide.bgColor')"
                 :alpha="true"
                 :colorLabels="true"
                 :zIndex="100"
-                @input="value => setSlideSetting({ key: 'slideBgColor', value: value })">
+                @input="value => setSlideSetting({ key: 'slide.bgColor', value: value })">
             </sw-colorpicker>
         {% endblock %}
+
+        <blur-card-section>
+
+            <blur-paragraph 
+                :title="$tc('blurElysiumSlides.slideSettings.slide.bgGradient.title')"
+                :style="{
+                    marginBottom: '16px'
+                }" />
+
+            <sw-container 
+                columns="repeat(4, minmax(0, 1fr))" 
+                gap="0 16px">
+
+                <sw-colorpicker
+                    v-if="slide.slideSettings"
+                    colorOutput="auto"
+                    :value="slide.slideSettings.slide?.bgGradient?.startColor" 
+                    :label="$tc('blurElysiumSlides.slideSettings.slide.bgGradient.startColor')"
+                    :alpha="true"
+                    :colorLabels="true"
+                    :zIndex="100"
+                    @input="value => setSlideSetting({ key: 'slide.bgGradient.startColor', value: value })">
+                </sw-colorpicker>
+
+                <sw-colorpicker
+                    v-if="slide.slideSettings"
+                    colorOutput="auto"
+                    :value="slide.slideSettings.slide?.bgGradient?.endColor" 
+                    :label="$tc('blurElysiumSlides.slideSettings.slide.bgGradient.endColor')"
+                    :alpha="true"
+                    :colorLabels="true"
+                    :zIndex="100"
+                    @input="value => setSlideSetting({ key: 'slide.bgGradient.endColor', value: value })">
+                </sw-colorpicker>
+
+                <sw-select-field 
+                    v-if="slide.slideSettings"
+                    :value="slide.slideSettings.slide?.bgGradient?.gradientType ?? 'linear-gradient'"
+                    :label="$tc('blurElysiumSlides.slideSettings.slide.bgGradient.gradientType')"
+                    @change="value => setSlideSetting({key:'slide.bgGradient.gradientType', value: value})">
+                    <option value="linear-gradient">Linear</option>
+                </sw-select-field>
+
+                <sw-number-field
+                    v-if="slide.slideSettings"
+                    type="int"
+                    :step="1"
+                    :min="-360"
+                    :max="360"
+                    :value="slide.slideSettings.slide?.bgGradient?.gradientDeg ?? 45" 
+                    :label="$tc('blurElysiumSlides.slideSettings.slide.bgGradient.gradientDeg')"
+                    @change="value => setSlideSetting({ key: 'slide.bgGradient.gradientDeg', value: value })"
+                />
+            </sw-container>
+        </blur-card-section>
 
         {% block blur_elysium_slides_setting_slide_css_class %}
             <sw-text-field
