--- a/src/Resources/views/storefront/component/blur-elysium-slide/default/container.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/default/container.html.twig
@@ -1,10 +1,11 @@
 {% set containerClasses = [
     'blur-elysium-slide-container',
-    'd-flex',
-    'flex-wrap'
+    'd-grid',
 ] %}
 
 <div class="{{ containerClasses|join(' ') }}">
     {% sw_include '@Storefront/storefront/component/blur-elysium-slide/default/content.html.twig' %}
-    {% sw_include '@Storefront/storefront/component/blur-elysium-slide/default/image.html.twig' %}
+    {% if slideData.presentationMedia %}
+        {% sw_include '@Storefront/storefront/component/blur-elysium-slide/default/image.html.twig' %}
+    {% endif %}
 </div>
